              in the regina:: namespace.
        Class Rational:
            - New function str().
            - Added a spaceship operator (<=>) for comparisons.
        Class Rotation3D:
            - New class to support floating-point 3-D geometry.
        Class SatAnnulus:
            - Routine attachLST() now checks its preconditions, and throws
              an exception if they fail.
        Class Segment3D:
            - New class to support floating-point 3-D geometry.
        Struct SFSFibre:
            - Added a spaceship operator (<=>) for comparisons.  This has the
              effect of implementing all comparison operators, not just
              less-than (<) as before.
        Class SFSpace:
            - Added a spaceship operator (<=>) for aesthetic comparisons.
              This has the effect of implementing all comparison operators,
              not just less-than (<) as before.
        Class Simplex<dim>:
            - New routines lock(), lockFacet(), unlock(), unlockFacet(),
              unlockAll(), isLocked(), isFacetLocked(), and lockMask().
        Class SnapPeaTriangulation:
            - Construction from a SnapPea data file no longer crashes when the
              triangulation in the file has finite vertices (which may be seen
              if the file was created by some tool other than SnapPy).  The
              manifold will however be retriangulated (drilled and filled) upon
              creation since the SnapPea kernel requires an ideal triangulation.
        Class SpatialLink:
            - New packet class for specific embeddings of knots and links in
              the 3-sphere.  Currently this offers very limited features, but
              these should be expanded to become more useful over time.
        Enum SurfaceFilterType:
            - This is now a scoped enumeration, for better type safety.  The
              old enum constants (e.g., NS_FILTER_PROPERTIES) have been renamed